rendered/test/templates/ingress.yaml
---
# Source: test/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "default-application"
  labels:    
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: test
    helm.sh/chart-version: "0.1.0"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - test.htquanq
    secretName: default-application-tls
  rules:
  - host: test.htquanq
    http:
      paths:      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: default-app
            port:
              number: 8080
      - path: /abc
        pathType: Prefix
        backend:
          service:
            name: second-app
            port:
              name: http
---
# Source: test/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "second"
  labels:    
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: test
    helm.sh/chart-version: "0.1.0"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - abc.htquanq
    secretName: second-tls
  rules:
  - host: abc.htquanq
    http:
      paths:      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 9090
      - path: /xyz
        pathType: Prefix
        backend:
          service:
            name: another-test
            port:
              name: https
---
# Source: test/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "htquanq"
  labels:    
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: test
    helm.sh/chart-version: "0.1.0"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - asddasdasdsad.htquanq
    secretName: htquanq-tls
  rules:
  - host: asddasdasdsad.htquanq
    http:
      paths:      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: htquanq
            port:
              number: 9000
